@@ -35,11 +35,11 @@ LT_BEGIN_C_DECLS
 
 #define MALLOC(tp, n)		(tp*) lt__malloc((n) * sizeof(tp))
 #define REALLOC(tp, mem, n)	(tp*) lt__realloc((mem), (n) * sizeof(tp))
-#define FREE(mem)				LT_STMT_START {	\
-	free (mem); mem = NULL;					} LT_STMT_END
-#define MEMREASSIGN(p, q)			LT_STMT_START {	\
+#define FREE(mem)				LT_STMT_START \
+	free (mem); mem = NULL;					LT_STMT_END
+#define MEMREASSIGN(p, q)			LT_STMT_START \
 	if ((p) != (q)) { free (p); (p) = (q); (q) = 0; }	\
-								} LT_STMT_END
+								LT_STMT_END
 
 /* If set, this function is called when memory allocation has failed.  */
 LT_SCOPE void (*lt__alloc_die) (void);
